Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15004

osd_declare_xattr_del() shouldn't assert on NULL oo_dn

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • Upstream
    • None
    • 3
    • 9223372036854775807

      LustreError: 53132:0:(osd_xattr.c:992:osd_declare_xattr_del()) ASSERTION( obj->oo_dn != ((void *)0) ) failed: 
      LustreError: 53132:0:(osd_xattr.c:992:osd_declare_xattr_del()) LBUG
      Pid: 53132, comm: ll_ost_out00_00 4.18.0 #37 SMP Thu Apr 29 04:36:22 UTC 2021
      Call Trace:
      [<0>] libcfs_call_trace+0x76/0xa0 [libcfs]
      [<0>] lbug_with_loc+0x3e/0x80 [libcfs]
      [<0>] osd_declare_xattr_del+0x238/0x2e0 [osd_zfs]
      [<0>] out_xattr_del_add_exec+0x58/0x240 [ptlrpc]
      [<0>] out_xattr_del+0xf0/0x230 [ptlrpc]
      [<0>] out_handle+0x158a/0x2140 [ptlrpc]
      [<0>] tgt_request_handle+0xc01/0x1a30 [ptlrpc]
      [<0>] ptlrpc_main+0x1716/0x3300 [ptlrpc]
      [<0>] kthread+0x11a/0x130
      [<0>] ret_from_fork+0x24/0x30
      [<0>] 0xffffffffffffffff
      

      this assertion is wrong since LU-14531 landing

            bzzz Alex Zhuravlev
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: