LU-15004 osd: remove wrong assertion on oo_dn

which is invalid since  LU-14531 landing. instead we just
check that the object does exist and return an error otherwise.
all this is serialized against object destroy.

Fixes: 51350e9b738d("LU-14531 osd: serialize access to object vs object destroy")

Signed-off-by: Alex Zhuravlev <bzzz@whamcloud.com>
Change-Id: Icff39987f4f8d5a8227c6e3b829b58979c1b1941
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/44911
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Mikhail Pershin <mpershin@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>